@@ -48,6 +48,7 @@ class Ctx:
     self.revision_reader = None
     self.svnadmin_executable = config.SVNADMIN_EXECUTABLE
     self.trunk_only = False
+    self.include_empty_directories = False
     self.prune = True
     self.cvs_author_decoder = CVSTextDecoder(['ascii'])
     self.cvs_log_decoder = CVSTextDecoder(['ascii'])
