@@ -1,0 +1,59 @@
+head	1.3;
+access;
+symbols
+	TAG:1.3
+	BRANCH:1.3.0.2;
+locks; strict;
+comment	@# @;
+
+
+1.3
+date	2010.01.17.03.34.23;	author mhagger;	state Exp;
+branches;
+next	1.2;
+commitid	0WdTFEWnGdyo3Fju;
+
+1.2
+date	2010.01.17.03.31.15;	author mhagger;	state dead;
+branches;
+next	1.1;
+commitid	Ok3DlSXoWUFj2Fju;
+
+1.1
+date	2010.01.16.06.19.51;	author mhagger;	state Exp;
+branches;
+next	;
+commitid	T0xGHIyHXxz90yju;
+
+
+desc
+@@
+
+
+1.3
+log
+@Re-add b.txt.
+@
+text
+@b2
+@
+
+
+1.2
+log
+@Remove b.txt.
+@
+text
+@d1 1
+a1 1
+b
+@
+
+
+1.1
+log
+@Add b.txt.
+@
+text
+@@
+
