@@ -1,0 +1,1 @@
+This empty directory should be created when b.txt is created.
