@@ -1,0 +1,2 @@
+This directory should be created when the addition of c.txt triggers
+the creation of its parent.
