@@ -1,0 +1,2 @@
+This directory should be created when its parent is created, namely
+when c.txt is added.
