@@ -763,6 +763,13 @@ sprouts).</p>
   </tr>
 
   <tr>
+    <td align="right"><tt>--include-empty-directories</tt></td>
+    <td>Treat empty subdirectories within the CVS repository as actual
+      directories, creating them when the parent directory is created
+      and removing them if and when the parent directory is pruned.</td>
+  </tr>
+
+  <tr>
     <td align="right"><tt>--no-prune</tt></td>
     <td>When all files are deleted from a directory in the Subversion
       repository, don't delete the empty directory (the default is to
