@@ -131,8 +131,9 @@ customization by writing Python code.</p>
   <dd>cvs2svn provides many options that allow you to customize the
     structure of the resulting Subversion repository
     (<tt>--trunk</tt>, <tt>--branches</tt>, <tt>--tags</tt>,
-    <tt>--no-prune</tt>, <tt>--symbol-transform</tt>, etc.; see also
-    the additional customization options available by using the <a
+    <tt>--include-empty-directories</tt>, <tt>--no-prune</tt>,
+    <tt>--symbol-transform</tt>, etc.; see also the additional
+    customization options available by using the <a
     href="#options-file-method"><tt>--options</tt>-file
     method</a>).</dd>
 
